# trivago-recruitment

./: .gitignore  Dockerfile  Makefile  README.how-to-run.md  README.md  design_document.md  docker-compose.yml  requirements.txt  scaling_discussion.md  test_output.py
data/: reviews.jsonl
ingestion/: pyproject.toml
ingestion/src/ingestion/: cli.py  config.py  processor.py  spark_utils.py
ingestion/tests/: test_config_parser.py  test_processor.py
ingestion/tests/test_data/: test_config.yaml
ingestion/tests/test_data/input/: inappropriate_words.txt
ingestion/tests/test_data/schemas/: aggregation.json
ingestion_config/: default.yaml
